--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "bootstrap": "^5.1.0",
+    "chart.js": "^3.5.1",
     "qs": "^6.10.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.6",
+    "react-chartjs-2": "^3.0.5",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.0.3",
+    "sweetalert2": "^11.1.7",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
